@@ -22,7 +22,6 @@ repository.type   = git
 [PodSyntaxTests]
 
 [Prereqs]
-Sub::Exporter    = 0
 Exporter         = 0
 List::Util       = 0
 
