@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Make Sub::Exporter an optional dep (which is kinda the whole point)
 
 0.001001  2012-07-29 19:58:40 America/Chicago
   - Fix '-all' option for the default group
